docs: get events by email
