# backend/src/routes/api.routes.js
@@ -13,9 +13,9 @@ router.post('/test', userController.test);
 router.post('/login', userController.loginUser); // doc
 router.post('/register', userController.registerUser); // doc
 
-router.get('/events', eventController.getEvents); //doc
-router.get('/events/:useremail', tokenCheck, eventController.getEventsByUserEmail);
-router.get('/provider/events/:provideremail', tokenCheck, providerCheck, eventController.getEventsByProvider);
+router.get('/events', eventController.getEvents); // doc
+router.get('/events/:useremail', tokenCheck, eventController.getEventsByUserEmail); // doc
+router.get('/provider/events/:provideremail', tokenCheck, providerCheck, eventController.getEventsByProvider); //doc
 router.post('/events/new', tokenCheck, eventController.createNewEvent);
 
 router.get('/users/:service', tokenCheck, userController.getUsersByService);
