# docs/swagger.yaml
@@ -296,7 +296,7 @@ paths:
         - bearerAuth: []
       responses:
         200:
-          description: Return event in array
+          description: Return events in array
           content:
             application/json:
               schema:
@@ -314,4 +314,57 @@ paths:
                       type: string
                 example: 
                   message: Something went wrong
+  /events/{useremail}:
+    get:
+      summary: get events by user e-mail
+      tags: [Event]
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: Return events in array
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#components/schemas/Event'
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                  parameters:
+                    message: 
+                      type: string
+                example: 
+                  message: Something went wrong
+  /events/{provideremail}:
+    get:
+      summary: get events by provider's e-mail
+      tags: [Event]
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: Return events in array
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#components/schemas/Event'
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                  parameters:
+                    message: 
+                      type: string
+                example: 
+                  message: Something went wrong
+
                   
